# nahsql

./: .gitignore  Cargo.toml  README.md  TODO.md
.zed/: settings.json
examples/: async.rs  main.rs  std.rs  sync.rs  tokio.rs
src/: lib.rs  meta.rs  value.rs
src/access/: entry.rs  error.rs  index.rs  manifest.rs  mod.rs  table.rs
src/auxiliary/: error.rs  index.rs  insert.rs  mod.rs
src/data/: entry.rs  index.rs  manifest.rs  mod.rs  table.rs
src/database/: contents.rs  entry.rs  error.rs  manifest.rs  mod.rs  validate.rs
src/database/table/: index.rs  mod.rs  validate.rs
src/database/table/entry/: manifest.rs  mod.rs
src/database/table/index/: mod.rs
src/database/table/validate/: index.rs  mod.rs
src/path/: blob.rs  db.rs  entry.rs  index.rs  mod.rs  table.rs
src/query/: mod.rs
src/schema/: error.rs  field.rs  mod.rs  table.rs
